# gaia-net

./: .clang-format  .gaianet-config.cmake.in.bak  .gaianet-modules.cmake.in.bak  .gitignore  .libgaianet.pc.in.bak  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  build_dep.sh  clone_dep.sh
bazel/: BUILD  fmtlib.BUILD  gaia_net_deps.bzl  grpc.BUILD  hiredis.BUILD  lz4.BUILD  nlohmann_json.BUILD  openssl.BUILD  protobuf.BUILD  redis-plus-plus.BUILD  redis_plus_plus.BUILD  repositories.bzl  yacl.bzl
src/: BUILD  SafeQueue.h  ThreadPool.h  channel.cpp  channel.h  gaiahelper.cpp  gaiahelper.h  gaianet.cpp  gaianet.h  gaiarandom.cpp  gaiarandom.h  gaiathread.cpp  gaiathread.h  grpc_client.cpp  grpc_client.h  ichannel.cpp  ichannel.h  memchannel.cpp  memchannel.h  redis_client.cpp  redis_client.h  version.cpp
src/gaia_utils/: fast_resize.h  likely.h
src/protos/: gaia_meta.grpc.pb.cc  gaia_meta.grpc.pb.h  gaia_meta.pb.cc  gaia_meta.pb.h  gaia_meta.proto  gaia_proxy.grpc.pb.cc  gaia_proxy.grpc.pb.h  gaia_proxy.pb.cc  gaia_proxy.pb.h  gaia_proxy.proto
test/: .apt.sh  BUILD  CMakeLists.txt  channel_bench.cpp  dump.rdb
test/channel_bench.dSYM/Contents/: Info.plist
test/channel_bench.dSYM/Contents/Resources/DWARF/: channel_bench
test/channel_bench.dSYM/Contents/Resources/Relocations/aarch64/: channel_bench.yml
test/channel_echo.dSYM/Contents/: Info.plist
test/channel_echo.dSYM/Contents/Resources/DWARF/: channel_echo
test/channel_echo.dSYM/Contents/Resources/Relocations/aarch64/: channel_echo.yml
test/channel_test.dSYM/Contents/: Info.plist
test/channel_test.dSYM/Contents/Resources/DWARF/: channel_test
test/channel_test.dSYM/Contents/Resources/Relocations/aarch64/: channel_test.yml
test/test_grpc_memleak.dSYM/Contents/: Info.plist
test/test_grpc_memleak.dSYM/Contents/Resources/DWARF/: test_grpc_memleak
test/test_grpc_memleak.dSYM/Contents/Resources/Relocations/aarch64/: test_grpc_memleak.yml
